@@ -24,3 +24,5 @@ hs_err_pid*
 /target/
 /cache/
 /bak/
+/.classpath
+/.project
